RESOLVED FIXED111546
[BlackBerry] Pass String::StrictConversion instead of true to String::utf8()
https://bugs.webkit.org/show_bug.cgi?id=111546
Summary [BlackBerry] Pass String::StrictConversion instead of true to String::utf8()
Carlos Garcia Campos
Reported 2013-03-06 01:47:56 PST
String::utf8() API changed in r134173
Attachments
Patch (1.64 KB, patch)
2013-03-06 01:49 PST, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2013-03-06 01:49:18 PST
Rob Buis
Comment 2 2013-03-06 07:45:47 PST
Comment on attachment 191690 [details] Patch Ok.
WebKit Review Bot
Comment 3 2013-03-06 08:02:07 PST
Comment on attachment 191690 [details] Patch Clearing flags on attachment: 191690 Committed r144931: <http://trac.webkit.org/changeset/144931>
WebKit Review Bot
Comment 4 2013-03-06 08:02:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.